# movierec

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  requirements.txt
artifacts/ml-1m/: items.parquet
artifacts/ml-1m/bpr_mf/: item.npy  item_bias.npy  user.npy
artifacts/ml-1m/lightgcn/: item.npy  user.npy
artifacts/ml-1m/maps/: iid_map.parquet  uid_map.parquet
artifacts/ml-1m/metrics/: bpr_mf.json  lightgcn.json  popularity.json
artifacts/ml-1m/splits/: test.parquet  train.parquet  val.parquet
artifacts/ml-32m/: items.parquet
artifacts/ml-32m/bpr_mf/: item.npy  item_bias.npy  user.npy
artifacts/ml-32m/lightgcn/: item.npy  user.npy
artifacts/ml-32m/maps/: iid_map.parquet  uid_map.parquet
artifacts/ml-32m/metrics/: bpr_mf.json  lightgcn.json  popularity.json
artifacts/ml-32m/splits/: test.parquet  train.parquet  val.parquet
profiles/: demo.json
src/movierec/data/: download_movielens.py  load.py  prepare_ml1m.py  prepare_ml32m.py  splits.py
src/movierec/eval/: metrics.py
src/movierec/infer/: ann.py  personalize.py  user_profile.py
src/movierec/models/: bpr_mf.py  lightgcn.py  popularity.py
src/movierec/scripts/: app_streamlit.py  eval_embeddings.py  eval_popularity.py  train_bpr.py  train_lightgcn.py
